# presentation

./: .editorconfig  pyproject.toml  readme.md
src/presentation/: logic.py  main.py
src/presentation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_logic.py
