[project]
name = "presentation"
description = "My package description"
version = "1.0"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "matplotlib",
    "scipy"
]

[project.optional-dependencies]
dev = [
  'pytest',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
